feat: command line expressions can now be arrays/lists
this is only a first version (e.g., primitive arrays missing); Generics
make things hard to impossible without additional type annotations